--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,12 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      {
+        "ts-expect-error": "allow-with-description"
+      }
+    ]
   }
 }
